Rebase du client

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
+<head>
+  <title>CPS Tester</title>
+</head>
+<body>
+<div style="" class="login">
+    <input type="text" id="username" value="Utilisateur">
+    <button id="confirm">
+        Valider
+    </button>
+</div>
 
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
-</html>
+
+<section class="top">
+  <h1 class="big-title">
+      CPS Tester
+  </h1>
+  <span>
+            <a href="mailto:contact@veagle.fr" class="mail">
+                Contact
+            </a>
+        </span>
+</section>
+
+<section class="tester">
+  <div class="score">
+    <p class="score-text">
+      Score actuel :
+    </p>
+    <span class="cps">
+                0 CPS
+            </span>
+  </div>
+  <div class="time">
+    <p class="chrono">
+      Chronomètre :
+    </p>
+    <span class="time-value">
+                0s
+            </span>
+  </div>
+  <div class="button-container">
+    <button class="circle">
+                <span class="score-value">
+                    0
+                </span>
+    </button>
+  </div>
+  <div class="leaderboard">
+    <h3 class="lead">
+      Classement
+    </h3>
+    <ol class="players">
+
+    </ol>
+  </div>
+</section>
+
+</body>
