--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Classement ClicksCounter</title>
+    <script src="script/leaderboard.js" defer async></script>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <p>This is the leaderboard page for the ClicksCounter</p>
+    <h1>Classement du ClicksCounter de Livet :</h1>
+    <p>A vous de faire la suite.</p>
 </body>
 </html>
