Ajout du prompt serveur

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,8 +3,16 @@
   <title>CPS Tester</title>
 </head>
 <body>
+
+<div style="z-index: 10;" class="server">
+    <input type="text" id="server" placeholder="Serveur">
+    <button id="confirm-server">
+        Valider
+    </button>
+</div>
+
 <div style="" class="login">
-    <input type="text" id="username" value="Utilisateur">
+    <input type="text" id="username" placeholder="Utilisateur">
     <button id="confirm">
         Valider
     </button>
