Changement du leaderboard

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -52,13 +52,8 @@
                 </span>
     </button>
   </div>
-  <div class="leaderboard">
-    <h3 class="lead">
-      Classement
-    </h3>
-    <ol class="players">
+  <div class="container">
 
-    </ol>
   </div>
 </section>
 
