--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -8,6 +8,34 @@
 </head>
 <body>
     <h1>Classement du ClicksCounter de Livet :</h1>
-    <p>A vous de faire la suite.</p>
+    <div id="container">
+        <div id="podium">
+            <ul>
+                <li class="podium-users">
+                    <img src="assets/laurier.webp" alt="laurier" class="podium-img">
+                </li>
+                <li class="podium-users">
+
+                </li>
+                <li class="podium-users">
+
+                </li>
+            </ul>
+        </div>
+        <table id="list">
+            <thead>
+                <tr>
+                    <th>Position</th>
+                    <th>Nom</th>
+                    <th>Score</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody id="classement">
+
+            </tbody>
+        </table>
+    </div>
+
 </body>
 </html>
