--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -7,35 +7,31 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Classement du ClicksCounter de Livet :</h1>
-    <div id="container">
-        <div id="podium">
-            <ul>
-                <li class="podium-users">
-                    <img src="assets/laurier.webp" alt="laurier" class="podium-img">
-                </li>
-                <li class="podium-users">
-
-                </li>
-                <li class="podium-users">
-
-                </li>
-            </ul>
-        </div>
-        <table id="list">
-            <thead>
-                <tr>
-                    <th>Position</th>
-                    <th>Nom</th>
-                    <th>Score</th>
-                    <th>Date</th>
-                </tr>
-            </thead>
-            <tbody id="classement">
-
-            </tbody>
-        </table>
+<h1>Classement du ClicksCounter de Livet :</h1>
+<div id="container">
+    <div id="podium">
+        <ul>
+            <li class="podium-user gold">
+                <img src="assets/laurier.webp" alt="laurier">
+            </li>
+            <li class="podium-user silver"></li>
+            <li class="podium-user bronze"></li>
+        </ul>
     </div>
+    <table id="classement-table">
+        <thead>
+        <tr>
+            <th>Position</th>
+            <th>Nom</th>
+            <th>Score</th>
+            <th>Date</th>
+        </tr>
+        </thead>
+        <tbody id="classement-body">
+
+        </tbody>
+    </table>
+</div>
 
 </body>
 </html>
